export const GrpcServices = {
  MINIO_CLIENT_SERVICE: 'MinioClientService',
  USER_SERVICE: 'UserService',
};

export const MinioGrpcMethods = {
  UPLOAD_FILE: 'uploadFile',
  UPLOAD_ATTACHMENTS: 'uploadAttachments',
  UPLOAD_MESSAGE_ATTACHMENTS: 'uploadMessageAttachments',
};

export const UserGrpcMethods = {
  LOAD_CHART_USER_BY_ID: 'loadChartUserById',
};
